Added additional field getName() for sorting SubCategories